FIX: on mobile added width of container in search page with results

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -123,6 +123,7 @@
       align-items: stretch;
       align-content: stretch;
       max-width: 100%;
+      width: 100%;
       padding: 0;
     }
   }
